api_versioned_docs/version-12.1.3/avalonia/controls/models/itreedatagridcellmodel.mdx
---
title: 'ITreeDataGridCellModel'
hide_title: true
slug: '/avalonia/controls/models/itreedatagridcellmodel'
uid: 'Avalonia.Controls.Models.ITreeDataGridCellModel'
commentId: 'T:Avalonia.Controls.Models.ITreeDataGridCellModel'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.TreeDataGrid'
assembly: 'Avalonia.Controls.TreeDataGrid'
apiKind: 'Interface'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls.Models'
tfms:
  - 'net8.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">ITreeDataGridCellModel Interface</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls.Models</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.TreeDataGrid</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.TreeDataGrid</code>
</div>
</div>

<div className="apiref-page__lead">

Represents a cell in an [Avalonia.Controls.TreeDataGridSource](xref:Avalonia.Controls.TreeDataGridSource).

</div>

<div className="apiref-page__signature">

```csharp
public interface ITreeDataGridCellModel
```

</div>

## Properties

| Name | Description |
| --- | --- |
| [CanEdit](#uid-b08759fb1c) | Gets a value indicating whether the cell can enter edit mode. |
| [EditGestures](#uid-f316ff07c1) | Gets the gesture(s) that will cause the cell to enter edit mode. |
| [HorizontalContentAlignment](#uid-693b08153e) | Gets the horizontal alignment of the cell content. |
| [Value](#uid-8469d5dca0) | Gets the value of the cell. |
| [VerticalContentAlignment](#uid-36d3079c82) | Gets the vertical alignment of the cell content. |

<section className="apiref-page__member-entry">

<span id="uid-b08759fb1c"></span>

### CanEdit Property

Gets a value indicating whether the cell can enter edit mode.

```csharp
public bool CanEdit { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-f316ff07c1"></span>

### EditGestures Property

Gets the gesture(s) that will cause the cell to enter edit mode.

```csharp
public Avalonia.Controls.BeginEditGestures EditGestures { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-693b08153e"></span>

### HorizontalContentAlignment Property

Gets the horizontal alignment of the cell content.

```csharp
public Avalonia.Layout.HorizontalAlignment HorizontalContentAlignment { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-8469d5dca0"></span>

### Value Property

Gets the value of the cell.

```csharp
public object Value { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-36d3079c82"></span>

### VerticalContentAlignment Property

Gets the vertical alignment of the cell content.

```csharp
public Avalonia.Layout.VerticalAlignment VerticalContentAlignment { get; set; }
```

</section>

</ApiRefPage>

